refactor(spotify): replace parallel metadata lists with records and SpotifyType enum
- Replace legacy parallel metadata lists with immutable SpotifyTrack and SpotifyResult records
- Introduce SpotifyType enum (TRACK, EPISODE, PLAYLIST, ALBUM) to replace raw string identifiers across parser, bridge, and cache layers
- Update TrackPayloadParser to convert normalized Python JSON arrays into SpotifyTrack records safely
- Refactor SpotifyBulkLoader and SpotifyPlaylistPromptHandler to consume SpotifyTrack records directly, eliminating parallel index lookups
- Standardize scraper.py to consistently return parallel array payloads for all media types (tracks, episodes, playlists, albums)